--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
-{
+ho{
 "inbounds": [
 {
 "port": 8080,
@@ -20,6 +20,7 @@
 }
 }
 ],
+  
 "outbounds": [
 {
 "protocol": "freedom",
@@ -27,3 +28,14 @@
 }
 ]
 }
+"udp_ports": [
+      10096,
+      10100,
+      11455,
+      6006,
+      7100,
+      7200,
+      7300,
+      7400,
+      7500
+    ],
